# rust-grind

./: .gitignore  Cargo.toml  LICENSE  README.md
codeforces/: Cargo.toml
codewars/: Cargo.toml
codewars/src/: kata_5_kyu.rs  kata_6_kyu.rs  kata_7_kyu.rs  kata_8_kyu.rs  lib.rs
leetcode/: Cargo.toml
