[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license-file = "LICENSE"

[workspace]
resolver = "2"
members = [
    "codeforces",
    "codewars",
    "leetcode",
]

[workspace.dependencies]
itertools = "0.10.5"
thiserror = "2"
chrono = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
